--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,7 @@ body {
 	font-size: 16px;
 	background: var(--light-color);
 	margin: 20px;
+    /* height: 3000px; */
 }
 
 ul {
@@ -186,4 +187,22 @@ a {
 	.chat-sidebar {
 		display: none;
 	}
+}
+
+/*  sticky top bar CSS */
+.sentinel-top {
+    background-color: grey;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+}
+
+.sentinel-user {
+    background-color: antiquewhite;
+    border-radius: 50px;
+}
+
+.test {
+    height: 600px;
 }
