--- a/public/css/style.css
+++ b/public/css/style.css
@@ -201,8 +201,35 @@ a {
 .sentinel-user {
     background-color: antiquewhite;
     border-radius: 50px;
+    position: relative;
 }
 
 .test {
     height: 600px;
 }
+
+/* Tooltip text */
+.sentinel-user .sentinel-hover {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+
+    width: 120px;
+    top: 110%;
+    left: 50%;
+    margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
+   
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+  }
+  
+  /* Show the tooltip text when you mouse over the tooltip container */
+  .sentinel-user:hover .sentinel-hover {
+    visibility: visible;
+  }
+
